[package]
name = "tear"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-minecraft-ping = { path = "vendor/async-minecraft-ping" }
lazy_static = "1.4.0"
tokio = { version = "1", features = ["full"] }
